updated room type spec

--- a/contact.html
+++ b/contact.html
@@ -361,11 +361,12 @@
                         <div class="d-lg-flex align-items-center justify-content-between text-center">
                             <div>
                                 <h3 class="fs-20">Address</h3>
-                                742 Evergreen Terrace<br>
-                                Brooklyn, NY 11201
+                                Plot No.27, Village Mustafabad<br>
+                                Tehsil Kalinagar<br>
+                                Pilibhit, UP 262124
                             </div>
                             <div>
-                                <img src="images/logo-white.webp" class="w-200px" alt=""><br>
+                                <img src="images/logo-image-trnspt.png" class="w-200px" alt=""><br>
                                 <!-- <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -376,8 +377,8 @@
                             </div>
                             <div>
                                 <h3 class="fs-20">Contact Us</h3>
-                                T. +929 333 9296<br>
-                                M. contact@almaris.com
+                                T. +91 8810051111 , +91 7895829370<br>
+                                M. tigerwoodsptr@gmail.com
                             </div>
                         </div>
                     </div>                    
