updated room type spec

--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Almaris — Hotel Website Template</title>
+    <title>Tiger Woods Pilibhit</title>
     <link rel="icon" href="images/icon.webp" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Almaris — Hotel Website Template" name="description" >
+    <meta content="Tiger Woods Pilibhit , your stay into the Heart of Jungle" name="description" >
     <meta content="" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
@@ -18,6 +18,7 @@
     <link href="css/coloring.css" rel="stylesheet" type="text/css" >
     <!-- color scheme -->
     <link id="colors" href="css/colors/scheme-01.css" rel="stylesheet" type="text/css" >
+    <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
@@ -46,30 +47,6 @@
 
         <!-- header begin -->
         <header class="transparent has-topbar">
-            <div id="topbar">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="d-flex justify-content-between xs-hide">
-                                <div class="header-widget d-flex">                                    
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-location-pin"></i>742 Evergreen Terrace Brooklyn, NY 11201</a></div>
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-phone"></i>+929 333 9296</a></div>
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-envelope"></i>contact@almaris.com</a></div>
-                                </div>
-
-                                <div class="social-icons">
-                                    <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                                    <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                                    <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
-                                    <a href="#"><i class="fa-brands fa-pinterest fa-lg"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -78,16 +55,16 @@
                                 <!-- logo begin -->
                                 <div id="logo">
                                     <a href="index.html">
-                                        <img class="logo-main" src="images/logo-white.webp" alt="" >
-                                        <img class="logo-scroll" src="images/logo-black.webp" alt="" >
-                                        <img class="logo-mobile" src="images/logo-white.webp" alt="" >
+                                        <img class="logo-main" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-scroll" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-mobile" src="images/logo-image-trnspt.png" alt="" >
                                     </a>
                                 </div>
                                 <!-- logo close -->
                             </div>
                             <div class="de-flex-col header-col-mid">
                                 <ul id="mainmenu">
-                                    <li><a class="menu-item" href="index.html">Home</a>
+                                    <!-- <li><a class="menu-item" href="index.html">Home</a>
                                         <ul class="mega">
                                             <li>
                                                 <div class="container">
@@ -175,8 +152,8 @@
                                                 </div>                                                
                                             </li>
                                         </ul>
-                                    </li>
-                                    <li><a class="menu-item" href="rooms.html">Rooms</a>
+                                    </li> -->
+                                    <li><a class="menu-item">Rooms</a>
                                         <ul class="mega">
                                             <li>
                                                 <div class="container">
@@ -185,28 +162,28 @@
                                                             <div class="col-lg-3">
                                                                 <h4>Rooms</h4>
                                                                 <ul class="no-bg">
-                                                                    <li><a href="rooms.html">All Rooms Default</a></li>
-                                                                    <li><a href="rooms-style-2.html">All Rooms Style 2</a></li>
-                                                                    <li><a href="rooms-style-3.html">All Rooms Style 3</a></li>
+                                                                    <li><a href="alpine-retreat.html">Alpine Retreat</a></li>
+                                                                    <li><a href="timber-haven.html">Timber Haven</a></li>
+                                                                    <!-- <li><a href="rooms-style-3.html">All Rooms Style 3</a></li>
                                                                     <li><a href="room-single.html">Single Room</a></li>
-                                                                    <li><a href="room-single-style-2.html">Single Room Style 2</a></li>
+                                                                    <li><a href="room-single-style-2.html">Single Room Style 2</a></li> -->
                                                                 </ul>                     
                                                             </div>
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
-                                                                    <a href="room-single.html">
+                                                                    <a href="timber-haven.html">
                                                                         <div class="d-label">
                                                                             Best Seller
                                                                         </div>
-                                                                        <img src="images/form/2.jpg" class="w-100 relative hover-scale-1-1" alt="">
+                                                                        <img src="images/room-single/timber-2.jpg" class="w-100 relative hover-scale-1-1" alt="">
                                                                     </a>
 
                                                                     <div class="abs w-100 h-100 start-0 top-0 hover-bg-color"></div>
                                                                 </div>                            
-                                                                <h5 class="mt-3 mb-1">Deluxe Room</h5>                          
+                                                                <h5 class="mt-3 mb-1">Timber Haven</h5>                          
                                                             </div>
 
-                                                            <div class="col-lg-3 text-center">
+                                                            <!-- <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
                                                                     <a href="room-single.html">
                                                                         <div class="d-label">
@@ -218,20 +195,20 @@
                                                                     <div class="abs w-100 h-100 start-0 top-0 hover-bg-color"></div>
                                                                 </div>                            
                                                                 <h5 class="mt-3 mb-1">Family Suite</h5>                          
-                                                            </div>
+                                                            </div> -->
 
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
-                                                                    <a href="room-single.html">
+                                                                    <a href="alpine-retreat.html">
                                                                         <div class="d-label">
                                                                             Featured
                                                                         </div>
-                                                                        <img src="images/form/6.jpg" class="w-100 relative hover-scale-1-1" alt="">
+                                                                        <img src="images/room-single/room4.jpg" class="w-100 relative hover-scale-1-1" alt="">
                                                                     </a>
 
                                                                     <div class="abs w-100 h-100 start-0 top-0 hover-bg-color"></div>
                                                                 </div>                            
-                                                                <h5 class="mt-3 mb-1">Presidential Suite</h5>                          
+                                                                <h5 class="mt-3 mb-1">Alpine Retreat</h5>                          
                                                             </div>
                                                         </div>
                                                     </div>
@@ -240,16 +217,18 @@
                                         </ul>
                                     </li>
                                     <li><a class="menu-item" href="reservation.html">Reservation</a></li>
-                                    <li><a class="menu-item" href="#">Pages</a>
+                                    <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
+                                    <li><a href="about.html">About Us</a></li>
+                                    <!-- <li><a class="menu-item" href="#">Pages</a>
                                         <ul>
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="facilities.html">Facilities</a></li>
-                                            <li><a href="special-offers.html">Offers</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
-                                            <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="menu-item" href="news.html">News</a></li>
+                                            <!-- <li><a href="about.html">About Us</a></li> -->
+                                            <!-- <li><a href="facilities.html">Facilities</a></li> -->
+                                            <!-- <li><a href="special-offers.html">Offers</a></li> -->
+                                            <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                                            <!-- <li><a href="gallery-carousel.html">Gallery Carousel</a></li> -->
+                                        <!-- </ul> -->
+                                    <!-- </li> --> -->
+                                    <!-- <li><a class="menu-item" href="news.html">News</a></li> -->
                                     <li><a class="menu-item" href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
