updated room type spec

--- a/alpine-retreat.html
+++ b/alpine-retreat.html
@@ -532,7 +532,7 @@
                                 \nRooms: ${rooms}
                                 \nExtra Beds: ${extraBeds}`;
                         
-                                let whatsappNumber = "YOUR_NUMBER_HERE"; // Replace with your WhatsApp number (without + or spaces)
+                                let whatsappNumber = "+918810051111"; // Replace with your WhatsApp number (without + or spaces)
                                 let whatsappURL = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(message)}`;
                         
                                 window.open(whatsappURL, "_blank");
