updated room type spec

--- a/index.html
+++ b/index.html
@@ -516,21 +516,21 @@
                                                 <p>Explore the wilderness with our expert guides in specially equipped safari vehicles</p>
                                             </div>
                                         </div>
-                                        <div class="carousel-item active">
+                                        <div class="carousel-item ">
                                             <img src="images-mountain-hotel/features/safari2.webp" class="d-block w-100" alt="Safari Jeep">
                                             <div class="carousel-caption">
                                                 <h5>Wildlife Adventure</h5>
                                                 <p>Embark on an exhilarating tiger safari through the dense forests of Pilibhit Tiger Reserve, where nature’s untamed beauty comes alive.</p>
                                             </div>
                                         </div>
-                                        <div class="carousel-item active">
+                                        <div class="carousel-item ">
                                             <img src="images-mountain-hotel/features/safari5.jpg" class="d-block w-100" alt="Safari Jeep">
                                             <div class="carousel-caption">
                                                 <h5>Wildlife Adventure</h5>
                                                 <p>A must-experience safari that brings you face-to-face with the untamed wonders of Pilibhit’s rich biodiversity.</p>
                                             </div>
                                         </div>
-                                        <div class="carousel-item active">
+                                        <div class="carousel-item ">
                                             <img src="images-mountain-hotel/features/safari6.webp" class="d-block w-100" alt="Safari Jeep">
                                             <div class="carousel-caption">
                                                 <h5>Wildlife Adventure</h5>
