--- a/index.html
+++ b/index.html
@@ -516,13 +516,17 @@
                                                 <p>Explore the wilderness with our expert guides in specially equipped safari vehicles</p>
                                             </div>
                                         </div>
-                                        <div class="carousel-item ">
-                                            <img src="images-mountain-hotel/features/safari2.webp" class="d-block w-100" alt="Safari Jeep">
+                                        <div class="carousel-item">
+                                            <video class="d-block w-100" autoplay loop muted playsinline>
+                                                <source src="images-mountain-hotel/features/safari3.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
                                             <div class="carousel-caption">
                                                 <h5>Wildlife Adventure</h5>
                                                 <p>Embark on an exhilarating tiger safari through the dense forests of Pilibhit Tiger Reserve, where nature’s untamed beauty comes alive.</p>
                                             </div>
                                         </div>
+                                        
                                         <div class="carousel-item ">
                                             <img src="images-mountain-hotel/features/safari5.jpg" class="d-block w-100" alt="Safari Jeep">
                                             <div class="carousel-caption">
@@ -531,10 +535,17 @@
                                             </div>
                                         </div>
                                         <div class="carousel-item ">
-                                            <img src="images-mountain-hotel/features/safari6.webp" class="d-block w-100" alt="Safari Jeep">
+                                            <img src="images-mountain-hotel/features/safari14.jpg" class="d-block w-100" alt="Safari Jeep">
                                             <div class="carousel-caption">
                                                 <h5>Wildlife Adventure</h5>
                                                 <p>Let the wilderness embrace you as you embark on a safari filled with thrilling sights and sounds of the jungle.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="images-mountain-hotel/features/safari1.jpg" class="d-block w-100" alt="Safari Jeep">
+                                            <div class="carousel-caption">
+                                                <h5>Wildlife Adventure</h5>
+                                                <p>A must-experience safari that takes you deep into Pilibhit’s wilderness, offering close encounters with its majestic tigers and diverse wildlife.</p>
                                             </div>
                                         </div>
                                     </div>
