--- a/rooms-style-3.html
+++ b/rooms-style-3.html
@@ -464,14 +464,15 @@
                 </div>
             </div>
             <div class="subfooter">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            Copyright 2024 - https://ak2019cs.gitbook.io/aditya-kumar
-                        </div>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                With Passion :- "<a href="https://ak2019cs.gitbook.io/aditya-kumar" target="_blank">MaDgEnIuS_adi</a>"
             </div>
+        </div>
+    </div>
+</div>
+
         </footer>
         <!-- footer close -->
     </div>
